--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>"Validad Número de tarjeta"</title>
   </head>
   <body>
-  <script type="text/javascript"src="app.js">
-
-  </script>
+  <script type="text/javascript"src="app.js"> </script>
   </body>
 </html>
